--- a/README
+++ b/README
@@ -4,9 +4,9 @@
 
 
 Term::ShellUI makes it easy to implement a comprehensive Bash or
-GDB-like command line user interface.  It supports history, autocompletion,
-quoting, escaping, pretty much everything you would expect of a decent
-shell.
+GDB-like command line user interface.  It supports history,
+autocompletion, quoting, escaping, pretty much everything you would
+expect of a decent shell.
 
 
 PREREQUISITES
@@ -28,10 +28,11 @@ make install
 USAGE
 
 Fire up examples/synopsis-big.  Hit 'help' to display the available
-commands or 'help exists' to show detailed help for a command.
-Notice how everything can be tab-completed.  Experiment with passing
-the wrong number of arguments to a command.  Scroll back through
-history using the up arrow and use the history command.
+commands or 'help exists' to show detailed help for a command.  Notice
+how everything can be tab-completed.  Experiment with passing the wrong
+number of arguments to a command.  Scroll back through history using the
+up arrow and use the history command.  Use !! to repeat the last command
+or !$ to repeat just the last argument.
 
 Run 'perldoc lib/Term/ShellUI.pm' to see the API documentation.
 
