--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 - Support calling $term->run() multiple times (patch by Ryan Gies)
+- Now clients can call process_a_cmd manually (patch by Martin Kluge)
 
 
 0.9: 20 Mar 2011
