Everything is unambiguously under the MIT license

--- a/README
+++ b/README
@@ -42,8 +42,8 @@ Report bugs and submit patches via GitHub.
 
 LICENSE
 
-Copyright (c) 2003-2007 Scott Bronson, all rights reserved.
-This program is covered by the MIT license.
+Copyright (c) 2003-2011 Scott Bronson, all rights reserved.
+All the code in this archive is covered by the MIT license.
 
 
 AUTHOR
