--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 - Support calling $term->run() multiple times (patch by Ryan Gies)
 - Now clients can call process_a_cmd manually (patch by Martin Kluge)
+- Undeprecate Term::ReadLine::Perl since it works on Windows.
 
 
 0.9: 20 Mar 2011
