--- a/README
+++ b/README
@@ -8,16 +8,25 @@ GDB-like command line user interface.  It supports history,
 autocompletion, quoting, escaping, pretty much everything you would
 expect of a decent shell.
 
-GitHub: http://github.com/bronson/Term-ShellUI
-CPAN:   http://search.cpan.org/search?query=Term%3A%3AShellUI
+Homepage:   http://github.com/bronson/Term-ShellUI
+CPAN:       http://search.cpan.org/search?query=Term%3A%3AShellUI
+
+
+CODE
+
+Git: git clone git://github.com/bronson/Term-ShellUI.git
+Svn: svn co http://svn.github.com/bronson/Term-ShellUI.git Term-ShellUI
 
 
 PREREQUISITES
 
 None!  It runs just fine with Perl's default Term::ReadLine.  However,
-until you install Term::ReadLine::GNU, completion, editing, and history
-will not be available.  If you're on Windows then Term::ReadLine::Perl
-will probably be easier to install but it doesn't support completemsg().
+unless you install Term::ReadLine::GNU, basic functionality like
+completion, line editing, and history will not work.
+
+If you're on Windows then Term::ReadLine::Perl will be easier to install
+and work almost as well.  The only limitation is that it can't print
+hints for the user during completion (the completemsg call).
 
 
 INSTALLATION
@@ -30,15 +39,25 @@ make install
 
 USAGE
 
-Run examples/synopsis-big.  Hit 'help' to display the available commands
-or 'help exists' to show detailed help for a command.  Notice how
+Run examples/synopsis-big.  Type 'help' to display the available commands
+or 'help exists' to show detailed help for the exists command.  Notice how
 everything can be tab-completed.  Try passing the wrong number of
 arguments to a command.  Scroll back through history using the up arrow
-or Control-R and use the history command.
+or Control-R.  Also try using the history command.
 
 Run 'perldoc lib/Term/ShellUI.pm' to see the API documentation.
 
 Report bugs and submit patches via GitHub.
+
+
+ALTERNATIVES
+
+Term::CiscoCLI         http://ciscocli.sourceforge.net/
+  A fork/rewrite to make the command line feel like a Cisco
+  (Stanford) style CLI.  Also adds a bunch of useful features.
+
+Term::TUI
+  Presents a hierarchical command line interface.
 
 
 LICENSE
