--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.91: 17 May 2011
+
 - Support calling commands noninteractively (patch by Christian Kuelker)
 - Support calling $term->run() multiple times (patch by Ryan Gies)
 - Now clients can call process_a_cmd manually (patch by Martin Kluge)
