--- a/README
+++ b/README
@@ -62,12 +62,6 @@ Term::TUI
 
 LICENSE
 
-Copyright (c) 2003-2011 Scott Bronson, all rights reserved.
+Copyright (c) 2003-2012 by Scott Bronson, bronsshellui@rinspin.com
 All the code in this archive is covered by the MIT license.
-
-
-AUTHOR
-
-Scott Bronson
-bronson@rinspin.com
 
