Added Gitter link

--- a/README
+++ b/README
@@ -65,3 +65,5 @@ LICENSE
 Copyright (c) 2003-2012 by Scott Bronson, bronsshellui@rinspin.com
 All the code in this archive is covered by the MIT license.
 
+
+Join the chat at https://gitter.im/bronson/Term-ShellUI
